// Vitest Snapshot v1

exports[`storage crud > create storage 1`] = `undefined`;

exports[`storage crud > delete storage 1`] = `undefined`;

exports[`storage crud > get storage 1`] = `
{
  "comment": "???",
  "key": "114514",
  "need_permission_count": 1,
  "need_permissions": [
    "test_permission_1",
  ],
  "value": "",
}
`;

exports[`storage crud > get storages by query 1`] = `
[
  {
    "comment": "test1",
    "key": "a",
    "need_permission_count": 2,
    "need_permissions": [
      "test_permission_1",
      "test_permission_2",
    ],
    "value": "b",
  },
  {
    "comment": "test2",
    "key": "aa",
    "need_permission_count": 2,
    "need_permissions": [
      "test_permission_1",
      "test_permission_2",
    ],
    "value": "bb",
  },
]
`;

exports[`storage crud > update storage 1`] = `undefined`;

exports[`storage crud > update storage 2`] = `
{
  "comment": "???",
  "key": "114514",
  "need_permission_count": 2,
  "need_permissions": [
    "test_permission_1",
    "test_permission_2",
  ],
  "value": "",
}
`;
